 • Ressurect kbots +20% reclaim speed
 • T1 air transports vertical speed reduced 25% + cruisealtitude 65 -> 70

Fixes:
 • Fixed: Popup units wont start targeting unless enemy is within weapon range
 • Fixed: Reduced footprint of engine replacement trees + tree fire wont spread as wildly
 • Fixed: Continuous aiming change always being able to fire, even when turret was way off

Other:
 • New 'modern' unit icon set (made by IceXuick), choose between old/modern/modern_simplified in options
 • Added: Options > Graphics > "Nano effect": beam or particles (old effect)
 • Added: Options > Graphics > Shadows: "max quality", "min quality", "disable at average FPS"
 • Added: Options > Game > '   include builders' .. in area-selection, you can disable to exclude builders
 • Added: Options > Game > "passive builders": nanos, cons, labs
 • Options: Anti Aliasing options slider works again, and limited max value of 4 (MSAA will be used instead of FSAA)
 • Added widget: "DGun no ground enemy", mainly to prevent snap dgun on close raiding units (default disabled)
 • Added light effects to: laser hits, barrel fire, air thrusters, nano beams and fusion balls
 • New flak explosion effect + custom crashing airplane smoke trails
 • Removed dgun range circle when enemy com gets near
 • Added option: "Icon scale"
 • Auto set 10000 particles as minimum
 • Adjusted proportions of all BAR (remodeled) units to match their BA counterparts (modoption: barmodels)


10.12 -> 10.13
29/09/2018

Balance:
 • Reverted the global 10% reclaimspeed nerf (see 10.00)

Other:
 • Fixed "Set Target Default" erroring at game start
 • Fixed some missing water-splash effects
 • Fixed: The new "Contain mouse" option should show up in the options this time
 • Fixed: Auto disabling map widgets: *Mearth Location Tags*1.0 (render errors) and "Ambient player" (DsD v8)


10.11 -> 10.12
16/09/2018

IMPORTANT: Removed support for older engine versions, use 104.0.1.567 or newer.

Balance: